@@ -41,6 +41,7 @@ infixr 2   || ;			// logical or (short-circuit)
 infixr 3   && ;			// logical and (short-circuit)
 prefix 3   not ;		// logical negation
 infix  4   < > <= >= == != ;	// relations
+infix  4   === !== ;		// syntactic equality
 infixr 4   : ;			// list cons
 infixl 5   << >> ;		// bit shifts
 infixl 6   + - | ;		// addition, bitwise or
